# mcstatus-api

./: README.md  main.py  mcstatus.db  pyproject.toml
src/: auth.py  database.py  main.py  models.py  poller.py  schemas.py
